# dte-triage-tool

./: .gitignore  README.md  app.py  hello.py  main.py  pyproject.toml  quickstart.sh  requirements.txt  test_output.json  update_bugzilla.py
.github/workflows/: ci.yml
.streamlit/: config.toml
src/: kanban.py
src/UI/: __init__.py  kanban.py  package.json
src/UI/frontend/: package-lock.json  package.json
src/UI/src/: index.tsx
src/config/: setting.py  types.py
src/core/: state.py  triage.py  types.py  util.py
src/core/controllers/: base_controller.py  board_controller.py  form_controller.py
src/core/integrations/: api.py  bugzilla_integration.py  testrail_integration.py
src/core/intergrations/: api.py  testrail_integration.py
src/data/: bugzilla_case_template_body.md  bugzilla_case_template_title.md  bugzilla_suite_template_body.md  bugzilla_suite_template_title.md
tests/hurl/: conftest.py  manifest.yaml  run_tests.sh  test_run_hurl.py
tests/hurl/hurl_files/: base.vars  bugzilla.vars  create_bug.hurl  get_bug.hurl  get_cases_from_suite.hurl  get_cases_from_suite.vars  get_suites.hurl  search_bug.hurl  (+1 more)
tests/playwright/: conftest.py  locators.py  test_example.py  test_kanban_assign.py  test_kanban_filter.py
tests/unit/: basic_bug.json  conftest.py  create_request.json  create_response.json  test_bugzilla_create_blocking_bugs.py  test_bugzilla_create_bug.py  test_bugzilla_get_bug.py  test_bugzilla_payload_gen.py  test_bugzilla_update_bug.py  test_session_state.py  test_triage.py  test_util.py  update_request.json  update_response.json
(+16 files in other folders)
