[project]
name = "dte-triage-tool"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.2",
    "pytest>=8.4.1",
    "pytest-mock>=3.15.1",
    "pytest-httpserver>=1.1.3",
    "pytest-playwright>=0.7.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "streamlit>=1.48.1",
    "watchdog>=6.0.0",
    "streamlit-cookies-manager"
]
[tool.bumpversion]
current_version = "0.2.0"
commit = true
tag = true

[tool.bumpversion.file."pyproject.toml"]
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[dependency-groups]
dev = [
    "bump-my-version>=1.2.4",
    "ruff>=0.12.10"
]
